--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,13 @@
     <dependencyManagement>
         <dependencies>
             <!-- spring io -->
-            <dependency>
+            <!--<dependency>
                 <groupId>io.spring.platform</groupId>
                 <artifactId>platform-bom</artifactId>
                 <version>Cairo-SR7</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
+            </dependency>-->
 
             <!-- spring cloud -->
             <dependency>
